<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ViewFlipper
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/vf_project_screenshots">
            </ViewFlipper>

        </FrameLayout>

        <TextView
            style="@style/TextContent.Black"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/tv_project4_project_name"
            android:textSize="24sp" />

        <TextView
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/tv_project4_url" />

        <TextView
            style="@style/TextContent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:lineSpacingMultiplier="1"
            android:text="@string/tv_project4_description"
            android:textColor="@android:color/black" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/tv_project_client_title" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/tv_project4_client_name" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/tv_project_type_title" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/tv_project4_type_name" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/tv_project_start_date_title" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/tv_project4_start_date" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/tv_project_techspec_title" />

                <TextView
                    style="@style/TextSpec.Value"
                    android:text="@string/tv_project4_techspec" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>